<resources>
    <string name="app_name">SYM_LABO3</string>
    <string name="main_btn_qr_code">QR Code</string>
    <string name="main_btn_ibeacon">iBeacon</string>
    <string name="main_btn_nfc">NFC</string>
    <string name="nfc_text_username">Username</string>
    <string name="nfc_text_password">Password</string>
    <string name="nfc_btn_connect">Connect</string>
    <string name="qrcode_text_decoded">...</string>
    <string name="beacon_bluetooth">bluetooth</string>
    <string name="beacon_uuid">UUID</string>
    <string name="beacon_major_minor">Major Minor</string>
    <string name="beacon_rssi">RSSI</string>
    <string name="nfcauth_username_label">Username</string>
    <string name="nfcauth_password_label">Password</string>
    <string name="nfcauth_connect_btn">Connect</string>
    <string name="nfc_maximum_security_btn">Maximum security</string>
    <string name="nfc_medium_security_btn">Medium security</string>
    <string name="nfc_minimum_security_btn">Minimum security</string>
    <string name="nfc_security_level">Security lvl: 10/10</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission Denied</string>
</resources>