<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NFCActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:layout_margin="20dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/nfc_security_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nfc_security_level"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/nfc_maximum_security_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nfc_maximum_security_btn" />

        <Button
            android:id="@+id/nfc_medium_security_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nfc_medium_security_btn" />

        <Button
            android:id="@+id/nfc_minimum_security_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nfc_minimum_security_btn" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>