<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:weightSum="7">

        <ImageView
            android:id="@+id/beacon_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            tools:srcCompat="@drawable/beacon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/beacon_bluetooth_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beacon_bluetooth" />

            <TextView
                android:id="@+id/beacon_uuid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beacon_uuid" />

            <TextView
                android:id="@+id/beacon_major_minor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beacon_major_minor" />
        </LinearLayout>

        <TextView
            android:id="@+id/beacon_rssi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/beacon_rssi" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>