<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NFCAuthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:layout_margin="20dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/nfcauth_username_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nfcauth_username_label" />

        <EditText
            android:id="@+id/nfcauth_username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/nfcauth_password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nfcauth_password_label" />

        <EditText
            android:id="@+id/nfcauth_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/nfcauth_connect_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nfcauth_connect_btn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>